examples/error-codes/implementation-defined/IMPL-CCV8-bad.output
Error: IMPL-CCV8
Description: Conversion of a null pointer fragment to an integer type.
Type: Implementation defined behavior.
See also: C11 sec. 6.3.2.3:6, J.3.7:1 item 1
  at main(IMPL-CCV8-bad.c:7)
  at <file-scope>(<unknown>)
